<resources>
    <string name="app_name">RepasoEL2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="strCodigo">Ingrese Codigo</string>
    <string name="strNombre">Ingrese Nombre</string>
    <string name="strEmail">Ingrese Email</string>
    <string name="strTelefono">Ingrese Teléfono</string>
    <string name="strGrabar">Grabar</string>
</resources>
